Fixed the options spacing and flex issues for limit break

--- a/src/styles/Main.sass
+++ b/src/styles/Main.sass
@@ -286,7 +286,7 @@
     flex-shrink: 1 // Allow shrinking
     flex-basis: 0 // Start with no base size
     width: auto // Set width to auto for better responsiveness
-    max-width: 280px
+    max-width: 100%
     &:disabled
       @include input-disabled
 
